# mpc

./: .gitmodules  README.md  drone_control_planner.cpp  weights.json
configuration/: boundaries.json  external_force.json  final_position.json  general_setup.json
constraints_computation/: CMakeLists.txt  omega_computation.cpp  omega_computation.h
